--- a/style/boothAssignment.css
+++ b/style/boothAssignment.css
@@ -132,7 +132,7 @@ body {
   display: block;
 }
 #form-wrapper form #selectedDataTable tbody {
-  background-color: #efeeee;
+  background-color: white;
   display: flex;
   flex-wrap: wrap;
   height: auto;
@@ -140,9 +140,9 @@ body {
   padding: 5px;
 }
 #form-wrapper form #selectedDataTable tbody tr td {
-  background-color: white;
+  background-color: #efeeee;
   border: 1px solid #ddd;
-  padding: 12px;
+  padding: 5px 12px;
   display: inline-block;
   margin-right: 5px;
   margin-bottom: 5px;
