--- a/style/boothAssignment.css
+++ b/style/boothAssignment.css
@@ -14,26 +14,18 @@ body {
   background-color: #f5f5f5 !important;
 }
 
-#form-wrapper {
-  flex-wrap: wrap;
-}
-#form-wrapper .column {
-  width: 50%;
-  padding: 10px;
-  border: solid 1px rgb(242, 238, 238);
-  margin: 10px;
-  background-color: #ffffff;
-}
 #form-wrapper form {
-  padding: 10px;
+  display: inline-block;
+  padding: 80px;
   width: 100%;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
 }
 #form-wrapper form h2 {
   margin-bottom: 10px;
 }
 #form-wrapper form #searchExhibitor {
-  background-color: #e8e8e8;
-  padding: 10px;
+  padding: 0px;
 }
 #form-wrapper form #searchExhibitor #inputSearch {
   width: 100%;
@@ -68,6 +60,7 @@ body {
   height: 400px !important;
   overflow: auto;
   margin-bottom: 20px;
+  padding: 0px;
 }
 #form-wrapper form #exhibitorsTable tbody {
   width: 100%;
@@ -124,8 +117,7 @@ body {
   /* Show them when they match */
 }
 #form-wrapper form #exhibitorBoothNumber {
-  background-color: #e8e8e8;
-  padding: 10px;
+  padding: 10px 0px;
 }
 #form-wrapper form {
   padding: 10px;
@@ -150,7 +142,7 @@ body {
   background-color: #e4e4e4;
   border: 1px solid #aaaaaa;
   border-radius: 6px;
-  padding: 4px 8px;
+  padding: 0px 8px;
   display: inline-block;
   margin-right: 5px;
   margin-bottom: 5px;
