--- a/style/boothAssignment.scss
+++ b/style/boothAssignment.scss
@@ -15,29 +15,21 @@ body {
 }
 
 #form-wrapper {
-  // display: flex;
-  flex-wrap: wrap;
-
-  .column {
-    width: 50%;
-    padding: 10px;
-    border: solid 1px rgb(242, 238, 238);
-    margin: 10px;
-    background-color: #ffffff;
-  }
 
   form {
-    padding: 10px;
+    display: inline-block;
+    padding: 80px;
     width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
 
     h2 {
       margin-bottom: 10px;
     }
 
-    //seacrh exhitbitors
+    //search exhitbitors
     #searchExhibitor {
-      background-color: #e8e8e8;
-      padding: 10px;
+      padding: 0px;
 
       #inputSearch {
         width: 100%;
@@ -69,7 +61,7 @@ body {
         }
       }
     }
-
+    //search results
     #exhibitorsTable {
       display: block;
       border-collapse: collapse;
@@ -78,6 +70,7 @@ body {
       height: 400px !important;
       overflow: auto;
       margin-bottom: 20px;
+      padding: 0px;
 
       tbody {
         width: 100%;
@@ -143,8 +136,7 @@ body {
     }
 
     #exhibitorBoothNumber {
-      background-color: #e8e8e8;
-      padding: 10px;
+      padding: 10px 0px;
     }
   }
 
@@ -172,7 +164,7 @@ body {
           background-color: #e4e4e4;
           border: 1px solid #aaaaaa;
           border-radius: 6px;
-          padding: 4px 8px;
+          padding: 0px 8px;
           display: inline-block;
           margin-right: 5px;
           margin-bottom: 5px;
