--- a/style/boothAssignment.scss
+++ b/style/boothAssignment.scss
@@ -11,11 +11,12 @@
 
 body {
   width: 100%;
-  background-color: #efeeee;
+  background-color: #f5f5f5 !important;
 }
 
 #form-wrapper {
-  display: flex;
+  // display: flex;
+  flex-wrap: wrap;
 
   .column {
     width: 50%;
@@ -34,18 +35,20 @@ body {
     }
 
     //seacrh exhitbitors
-    div {
+    #searchExhibitor {
+      background-color: #e8e8e8;
+      padding: 10px;
+
       #inputSearch {
         width: 100%;
-        font-size: 16px;
-        padding: 12px 20px 12px 40px;
+        border: solid 1px;
         margin-bottom: 10px;
         -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
         -moz-box-sizing: border-box; /* Firefox, other Gecko */
         box-sizing: border-box; /* Opera/IE 8+ */
       }
       div {
-        display: flex;
+        // display: flex;
         font-size: 13px;
 
         .indicator {
@@ -53,6 +56,7 @@ body {
           height: 13px;
           display: inline-block;
           margin: 0px 5px;
+          font-weight: normal !important  ;
         }
         .indiex {
           background-color: rgb(175, 119, 119);
@@ -73,8 +77,7 @@ body {
       font-size: 18px;
       height: 400px !important;
       overflow: auto;
-      margin-top: 20px;
-      // background-color: rgb(175, 119, 119);
+      margin-bottom: 20px;
 
       tbody {
         width: 100%;
@@ -85,23 +88,28 @@ body {
           line-height: 14px;
           position: relative;
           display: block;
+          background-color: white;
 
           td {
+            text-align: left;
             display: block;
             border-bottom: 1px solid #ddd;
             label {
               display: block;
               padding: 15px;
               cursor: pointer;
+              font-weight: normal !important;
+              font-size: 15px;
 
               input[type="checkbox"] {
                 display: inline-block;
               }
 
               .indicator {
-                width: 13px;
-                height: 13px;
+                font-size: 10px;
+                padding: 3px;
                 right: 10px;
+                display: inline-block;
                 position: absolute;
               }
               .indiex {
@@ -116,35 +124,31 @@ body {
             }
           }
         }
+
+        tr:hover {
+          background-color: #f1f1f1;
+        }
+      }
+
+      tbody tr {
+        display: none;
+        /*Hide rows by default*/
+      }
+
+      tbody tr.visible {
+        display: table-row;
+        display: block;
+        /* Show them when they match */
       }
     }
 
-    #exhibitorsTable tbody tr {
-      display: none;
-      /*Hide rows by default*/
+    #exhibitorBoothNumber {
+      background-color: #e8e8e8;
+      padding: 10px;
     }
-
-    #exhibitorsTable tbody tr.visible {
-      display: table-row;
-      display: block;
-      /* Show them when they match */
-    }
-
-    #exhibitorsTable td {
-      text-align: left;
-      display: block;
-    }
-
-    #exhibitorsTable tr:hover {
-      background-color: #f1f1f1;
-    }
-
-    #exhibitorsTable tbody {
-      height: 10px !important;
-    }
-    //table of selected exhibitors
   }
 
+  //table of selected exhibitors
   form {
     padding: 10px;
 
@@ -161,10 +165,14 @@ body {
         height: auto;
         border: 1px solid #ddd;
         padding: 5px;
+
         tr td {
-          background-color: #efeeee;
-          border: 1px solid #ddd;
-          padding: 5px 12px;
+          font-size: 14px;
+          color: #333333;
+          background-color: #e4e4e4;
+          border: 1px solid #aaaaaa;
+          border-radius: 6px;
+          padding: 4px 8px;
           display: inline-block;
           margin-right: 5px;
           margin-bottom: 5px;
