--- a/style/boothAssignment.scss
+++ b/style/boothAssignment.scss
@@ -40,6 +40,7 @@ body {
         box-sizing: border-box; /* Opera/IE 8+ */
       }
       div {
+        margin-top: -10px;
         // display: flex;
         font-size: 13px;
 
@@ -145,6 +146,7 @@ body {
     padding: 10px;
 
     #selectedDataTable {
+      margin-bottom: 20px;
       width: 100%;
       font-size: 18px;
       display: block;
